--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -33,6 +33,7 @@
             android:id="@+id/nameRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPersonName"
             android:hint="Name" />
     </android.support.design.widget.TextInputLayout>
 
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Birth Date"
+            android:inputType="date"
             tools:layout_editor_absoluteX="192dp"
             tools:layout_editor_absoluteY="115dp" />
     </android.support.design.widget.TextInputLayout>
@@ -79,6 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Email"
+            android:inputType="textEmailAddress"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="54dp" />
     </android.support.design.widget.TextInputLayout>
@@ -101,13 +104,13 @@
             android:id="@+id/passwordRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint=" Password" />
     </android.support.design.widget.TextInputLayout>
 
     <RadioGroup
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-
         android:orientation="vertical"
         android:layout_marginTop="49dp"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout12"
@@ -145,7 +148,6 @@
                 android:text="Female" />
         </LinearLayout>
     </RadioGroup>
-
     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
@@ -159,5 +161,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout14" />
-
 </android.support.constraint.ConstraintLayout>
