--- a/app/src/main/res/layout/new_education_details.xml
+++ b/app/src/main/res/layout/new_education_details.xml
@@ -77,8 +77,9 @@
                 android:layout_height="200dp"
                 android:descendantFocusability="beforeDescendants"></android.support.v7.widget.RecyclerView>
 <LinearLayout
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="end"
     android:weightSum="2">
     <Button
         android:id="@+id/save"
@@ -89,14 +90,14 @@
         android:layout_weight="1"
         android:text="SAVE" />
 
-            <Button
-                android:id="@+id/addSubject"
-                android:layout_weight="1"
-                style="@android:style/DeviceDefault.ButtonBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="add a subject" />
+            <!--<Button-->
+                <!--android:id="@+id/addSubject"-->
+                <!--android:layout_weight="1"-->
+                <!--style="@android:style/DeviceDefault.ButtonBar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="end"-->
+                <!--android:text="add a subject" />-->
 </LinearLayout>
 
             <TextView
