--- a/app/src/main/res/layout/activity_another.xml
+++ b/app/src/main/res/layout/activity_another.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.anshuman_hp.internship.AnotherActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/GroupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GroupName"
@@ -15,16 +15,17 @@
         android:textStyle="bold"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintTop_toBottomOf="@+id/videoSpinner"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp" />
 
 
     <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
+        android:id="@+id/videoSpinner"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -38,7 +39,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/videoRecycler"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -49,12 +50,13 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/GroupName"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Choose a Group"
         android:layout_marginRight="8dp"
@@ -62,5 +64,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 </android.support.constraint.ConstraintLayout>
