--- a/app/src/main/res/layout/hobby_item.xml
+++ b/app/src/main/res/layout/hobby_item.xml
@@ -4,10 +4,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/hobbyitem"
+    <CheckBox
+        android:id="@+id/hobbyItem"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="TextView"
-        android:textAlignment="center" />
+        android:layout_height="wrap_content"
+        android:text="CheckBox"
+        android:textSize="30sp"
+        android:background="@color/cardview_dark_background"
+        android:textColor="@color/cardview_light_background"
+        android:buttonTint="@color/cardview_light_background"
+        style="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox"
+        />
 </LinearLayout>
