--- a/app/src/main/res/layout/subject_entry.xml
+++ b/app/src/main/res/layout/subject_entry.xml
@@ -8,63 +8,38 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:weightSum="9"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="9">
+        android:weightSum="4"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
+            <TextView
+                android:id="@+id/subjectNameEducation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_weight="4"
+                android:text="SubjectName" />
 
             <EditText
-                android:id="@+id/subjectNameEdit"
-                style="@android:style/Widget.TextView"
-                android:layout_width="match_parent"
+                android:id="@+id/marksSubject"
                 android:layout_height="wrap_content"
-                android:cursorVisible="false"
-                android:text="Subject Name"
-                android:textStyle="normal"
-                android:typeface="monospace" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:text="23" />
 
-        <EditText
-            android:id="@+id/subjectMarkEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:cursorVisible="false"
-            android:gravity="bottom"
-            android:typeface="monospace" />
+            <TextView android:text="/"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:gravity="bottom"
-            android:text="/" />
-
-        <EditText
-            android:id="@+id/totalMarksEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:cursorVisible="false"
-            android:gravity="bottom"
-            android:typeface="monospace" />
+            <EditText
+                android:id="@+id/totalMarksSubject"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="100" />
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
