--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -15,7 +15,6 @@
         <ImageView
             android:id="@+id/videoThumbnail"
             android:layout_width="150dp"
-
             android:layout_height="120dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -29,10 +28,10 @@
             android:text="Video Name"
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/videoDuration" />
+            app:layout_constraintBottom_toTopOf="@+id/videoDuration"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <TextView
             android:id="@+id/videoDuration"
@@ -43,16 +42,35 @@
             android:text="Duration"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="8dp"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginTop="8dp"
+    android:id="@+id/linearLayout">
 
-        <ImageButton
-            android:id="@+id/shareVideo"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/cardview_light_background"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_menu_share" />
+    <ImageButton
+        android:id="@+id/rate"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+
+        android:background="@color/cardview_light_background"
+        app:srcCompat="@drawable/ic_star_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/favorites"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/cardview_light_background"
+        app:srcCompat="@drawable/ic_favorite_black_24dp" />
+    <ImageButton
+        android:id="@+id/shareVideo"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/cardview_light_background"
+        app:srcCompat="@drawable/ic_menu_share" />
+</LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
