--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -9,8 +9,8 @@
                 android:title="Share" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:icon="@drawable/ic_contact_mail_black_24dp"
+                android:title="Invite" />
         </menu>
     </item>
     <item android:title="About">
@@ -22,11 +22,13 @@
                 android:id="@+id/nav_about_app"
                 android:icon="@drawable/ic_info_black_24dp"
                 android:title="App" />
+            <item android:id="@+id/rateUs"
+                android:icon="@drawable/ic_rate_review_black_24dp"
+                android:title="Rate Us"/>
             <item
                 android:id="@+id/nav_about_developers"
                 android:icon="@drawable/ic_android_black_24dp"
                 android:title="Developers" />
-
         </menu>
     </item>
 
