--- a/app/src/main/res/layout/activity_add_hobby_activityt.xml
+++ b/app/src/main/res/layout/activity_add_hobby_activityt.xml
@@ -7,14 +7,14 @@
     tools:context="com.example.anshuman_hp.internship.AddHobbyActivityt">
     <Spinner
         android:id="@+id/chooseHobbyGroup"
-        android:layout_width="368dp"
-        android:layout_height="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:theme="@style/Theme.NoTitleBar.WithColoredSpinners"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="7dp"
-        android:background="@color/secondary_text"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
