--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -64,7 +64,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Female" />
+                    android:text="Female"
+                    tools:layout_editor_absoluteX="32dp"
+                    tools:layout_editor_absoluteY="103dp" />
+
             </RadioGroup>
 
             <Spinner
@@ -85,7 +88,7 @@
                 android:id="@+id/presentClassProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:text="Present Class"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -97,7 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Address"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="17dp"
@@ -105,19 +108,20 @@
 
             <EditText
                 android:id="@+id/addressProfile"
-                android:layout_width="395dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:minLines="10"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:inputType="textPostalAddress|textMultiLine"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
+                app:layout_constraintHorizontal_bias="0.0" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayout8"
@@ -137,9 +141,12 @@
                     android:id="@+id/birthdateEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="BirthDate"
+                    android:layout_weight="1"
                     android:drawableRight="@drawable/ic_date_range_black_24dp"
-                    android:inputType="date" />
+                    android:hint="BirthDate"
+                    android:cursorVisible="false"
+                    tools:layout_editor_absoluteX="252dp"
+                    tools:layout_editor_absoluteY="-77dp" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -163,5 +170,6 @@
                     android:hint="Name"
                     android:inputType="textPersonName" />
             </android.support.design.widget.TextInputLayout>
+
         </android.support.constraint.ConstraintLayout>
 </LinearLayout>
