--- a/app/src/main/res/layout/subject.xml
+++ b/app/src/main/res/layout/subject.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -6,8 +10,11 @@
 
     <TextView
         android:id="@+id/subject"
+        android:layout_margin="3dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="TextView"
-        android:background="@color/cardview_dark_background"/>
+        android:textSize="15sp"
+        />
 </LinearLayout>
+</android.support.v7.widget.CardView>
