--- a/app/src/main/res/layout/family_member.xml
+++ b/app/src/main/res/layout/family_member.xml
@@ -23,7 +23,9 @@
             android:hint="Name"
             android:inputType="textPersonName"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/photoFamily"
+            android:layout_marginLeft="8dp" />
 
         <EditText
             android:id="@+id/PhoneNumberFamily"
@@ -32,12 +34,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="7dp"
             android:ems="10"
             android:hint="Contact Number"
             android:inputType="phone"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/familyMemberRelation" />
+            app:layout_constraintTop_toBottomOf="@+id/familyMemberRelation"
+            app:layout_constraintLeft_toRightOf="@+id/photoFamily"
+            android:layout_marginLeft="8dp" />
 
         <EditText
             android:id="@+id/EmailIdFamily"
@@ -59,15 +63,16 @@
 
         <Spinner
             android:id="@+id/familyMemberRelation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="0dp"
+            android:background="@color/black_overlay"
             android:spinnerMode="dropdown"
-            android:theme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/familyMemberName" />
+            app:layout_constraintTop_toBottomOf="@+id/familyMemberName"
+            app:layout_constraintLeft_toRightOf="@+id/photoFamily"
+            android:layout_marginLeft="20dp" />
 
         <ImageView
             android:id="@+id/photoFamily"
@@ -77,6 +82,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
+            app:srcCompat="@drawable/ic_add_box_black_24dp"
+            android:layout_marginStart="8dp" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
