--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/save"
+        android:title="Save"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/sign_out"
         android:orderInCategory="100"
         android:title="Sign Out"
