--- a/app/src/main/res/layout/subject_entry.xml
+++ b/app/src/main/res/layout/subject_entry.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:weightSum="5"
     android:layout_margin="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <TextView
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:layout_weight="15"
         android:id="@+id/subjectNameEducation"
         android:text="SubjectName"/>
     <EditText
-        android:layout_weight="2"
-        android:layout_width="match_parent"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:id="@+id/marksSubject"
+        android:layout_weight="1"
         android:text="20"/>
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="10dp"
+        android:textSize="30dp"
         android:text="/"/>
     <EditText
-        android:layout_weight="2"
-        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:id="@+id/totalMarksSubject"
         android:text="100"/>
+
+    <ImageButton
+        android:id="@+id/deleteSubjectItem"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:background="@color/cardview_shadow_end_color"
+        app:srcCompat="@android:drawable/ic_delete" />
 </LinearLayout>
 
