--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -117,28 +117,30 @@
 
             <Spinner
                 android:id="@+id/stateSpinner"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14"></Spinner>
+                app:layout_constraintTop_toBottomOf="@+id/textView14"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"></Spinner>
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="State"
-                android:layout_marginTop="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginRight="8dp"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
             <LinearLayout
                 android:layout_width="358dp"
@@ -179,6 +181,19 @@
                     android:layout_marginTop="8dp"
                     android:hint="City"
                     android:inputType="textPostalAddress" />
+                <EditText
+                    android:id="@+id/PinCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:hint="Pin-Code"
+                    android:inputType="number"
+                    android:maxLength="6"/>
 
             </LinearLayout>
 
