--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -31,7 +31,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/videoDuration"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonsVideoItem" />
 
         <TextView
             android:id="@+id/videoDuration"
@@ -49,7 +49,7 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginTop="8dp"
-    android:id="@+id/linearLayout">
+    android:id="@+id/buttonsVideoItem">
 
     <ImageButton
         android:id="@+id/rate"
