--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:title="User Details">
+        <menu>
+            <item android:id="@+id/nav_profile"
+                android:icon="@drawable/ic_person_black_24dp"
+                android:title="Profile"/>
+            <item android:id="@+id/nav_hobby"
+                android:title="Hobbies"
+                android:icon="@drawable/ic_assessment_black_24dp"/>
+            <item android:id="@+id/nav_family"
+                android:title="Family"
+                android:icon="@drawable/ic_people_black_24dp"/>
+            <item android:id="@+id/nav_account"
+                android:title="Account"
+                android:icon="@drawable/ic_account_balance_black_24dp"/>
+        </menu>
+    </item>
 
+    <item android:title="Videos">
+        <menu>
+            <item android:title="Present Class"
+                android:icon="@drawable/ic_video_library_black_24dp"
+                android:id="@+id/presentClassVideos"/>
+            <item android:title="Favourites"
+                android:icon="@drawable/ic_bookmark_black_24dp"
+                android:id="@+id/favoritesVideos"/>
+        </menu>
+    </item>
+    <item android:title="Education Details"
+        android:id="@+id/EducationDetails"
+        android:icon="@drawable/ic_school_black_24dp"></item>
     <item android:title="Communicate">
         <menu>
             <item
@@ -15,20 +44,9 @@
     </item>
     <item android:title="About">
         <menu>
-            <item android:id="@+id/videos"
-                android:icon="@drawable/ic_video_library_black_24dp"
-                android:title="Videos"/>
-            <item
-                android:id="@+id/nav_about_app"
-                android:icon="@drawable/ic_info_black_24dp"
-                android:title="App" />
             <item android:id="@+id/rateUs"
                 android:icon="@drawable/ic_rate_review_black_24dp"
                 android:title="Rate Us"/>
-            <item
-                android:id="@+id/nav_about_developers"
-                android:icon="@drawable/ic_android_black_24dp"
-                android:title="Developers" />
         </menu>
     </item>
 
