24th September 12 pm

--- a/app/src/main/res/layout/activity_edit_school_details.xml
+++ b/app/src/main/res/layout/activity_edit_school_details.xml
@@ -126,6 +126,8 @@
                 android:id="@+id/schoolPinCodeEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="6"
+                android:inputType="number"
                 android:hint="Pin Code" />
 
         </LinearLayout>
