--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -99,6 +99,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        app:passwordToggleEnabled="true"
         app:layout_constraintHorizontal_bias="0.0"
         android:id="@+id/textInputLayout14">
 
