--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -6,6 +6,7 @@
     android:scrollbars="vertical"
     android:scrollIndicators="left"
     android:fadeScrollbars="false"
+    android:layout_marginBottom="50dp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
