--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -29,7 +29,7 @@
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail"
             android:layout_marginLeft="8dp"
             android:layout_marginBottom="8dp"
-            android:maxEms="20"
+            android:maxEms="12"
             android:ellipsize="end"
             app:layout_constraintBottom_toTopOf="@+id/videoDuration"
             android:layout_marginTop="8dp"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:text=""
+            android:text="Duration"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail" />
 <LinearLayout
@@ -74,5 +74,17 @@
         android:background="@color/cardview_light_background"
         app:srcCompat="@drawable/ic_menu_share" />
 </LinearLayout>
+
+        <TextView
+            android:id="@+id/videoPublishedBy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:text="Published By"
+            android:maxEms="8"
+            android:ellipsize="end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
