--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:title="Videos">
+        <menu>
+            <item android:title="Tutorials"
+                android:icon="@drawable/ic_video_library_black_24dp"
+                android:id="@+id/presentClassVideos"/>
+            <item android:title="My Favourites"
+                android:icon="@drawable/ic_bookmark_black_24dp"
+                android:id="@+id/favoritesVideos"/>
+        </menu>
+    </item>
     <item android:title="User Details">
         <menu>
             <item android:id="@+id/nav_profile"
@@ -11,25 +21,17 @@
             <item android:id="@+id/nav_family"
                 android:title="Family"
                 android:icon="@drawable/ic_people_black_24dp"/>
+            <item android:title="Education Details"
+                android:id="@+id/EducationDetails"
+                android:icon="@drawable/ic_school_black_24dp"></item>
             <item android:id="@+id/nav_account"
                 android:title="Account"
                 android:icon="@drawable/ic_account_balance_black_24dp"/>
         </menu>
     </item>
 
-    <item android:title="Videos">
-        <menu>
-            <item android:title="Present Class"
-                android:icon="@drawable/ic_video_library_black_24dp"
-                android:id="@+id/presentClassVideos"/>
-            <item android:title="Favourites"
-                android:icon="@drawable/ic_bookmark_black_24dp"
-                android:id="@+id/favoritesVideos"/>
-        </menu>
-    </item>
-    <item android:title="Education Details"
-        android:id="@+id/EducationDetails"
-        android:icon="@drawable/ic_school_black_24dp"></item>
+
+
     <item android:title="Communicate">
         <menu>
             <item
@@ -46,7 +48,7 @@
         <menu>
             <item android:id="@+id/rateUs"
                 android:icon="@drawable/ic_rate_review_black_24dp"
-                android:title="Rate Us"/>
+                android:title="Contact Us"/>
         </menu>
     </item>
 
